--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,11 +1,4 @@
-# These owners will be the default owners for everything in
-# the repo. Unless a later match takes precedence,
-# @global-owner1 and @global-owner2 will be requested for
-# review when someone opens a pull request.
-*       @yawetag
-
-# Order is important; the last matching pattern takes the most
-# precedence. When someone opens a pull request that only
-# modifies JS files, only @js-owner and not the global
-# owner(s) will be requested for a review.
-parse_comments.py    @yawetag @n8n-r
+# This locks user_config to prevent someone from
+# accidentally pushing a non-anonymized version
+# of the file to the repository.
+user_config.py    @yawetag @n8n-r
